--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://LovedyLJ:Loveannah1@lovedysei.nsinumy.mongodb.net/mern?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://LovedyLJ:Loveannah1@lovedysei.nsinumy.mongodb.net/SeiCafe?retryWrites=true&w=majority
 SECRET=lovedykhfmcnidfninmskj
